# fuel_cost_server

./: .gitignore  Cargo.toml  Dockerfile  Fuel_Cost_API.postman_collection.json  README.Docker.md  README.md  compose.yaml  index.html  ngnix.md
src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs
